# aramid

./: .gitignore  AGENTS.md  CLAUDE.md  GRAPHITE.md  LICENSE  README.md  aramid.toml  pyproject.toml
.github/workflows/: aramid.yml
docs/: knowledge-base.md  user-guide.md
graph-out/: .graphite_analysis.json  .graphite_clusters.json  .graphite_graph.json  .graphite_manifest.json  .graphite_validation.json  GRAPH_REPORT.md  graph.html  graph.json
src/aramid/: __main__.py  autolearn.py  cli.py  config.py  dast_probe.py  detectors.py  fingerprint.py  fuzzdriver.py  fuzzgen.py  gitutil.py  hooks.py  jsmutate.py  ledger.py  models.py  mutation.py  mutation_gate.py  mutation_score.py  normalizer.py  pack.py  pipeline.py  policy.py  queue.py  redact.py  registry.py  reporter.py  review.py  tdd.py  triage.py
tests/: conftest.py
tests/e2e/: test_hook_fires.py  test_schedule_e2e.py  test_windows_hooks.py
tests/fixtures/: eslint.json  gitleaks.json  mypy.txt  npm-audit.json  pip-audit.json  pnpm-audit.json  ruff.json  semgrep.json  tsc.txt  yarn-audit.json
tests/integration/: conftest.py  test_arm.py  test_autolearn_cmd.py  test_check.py  test_cli_dispatch.py  test_dast_consumer.py  test_doctor.py  test_doctor_fix_gitleaks.py  test_drain.py  test_fingerprint_modes.py  test_fuzz_consumer.py  test_gates_end_to_end.py  test_gitleaks_live.py  test_history_fingerprint.py  test_init.py  test_js_mutation_consumer.py  test_ledger_cmd.py  test_llm_review.py  test_mutation_consumer.py  test_mutation_gate_e2e.py  test_mutation_score_cmd.py  test_override.py  test_pack_cmd.py  (+9 more)
(+140 files in other folders)
