[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aramid"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["tomli-w>=1.0", "pip-audit>=2.7", "ruff>=0.6", "semgrep>=1.100"]

[project.optional-dependencies]
dev = ["pytest>=8", "pyyaml>=6"]

[project.scripts]
aramid = "aramid.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aramid = ["data/*.toml", "data/*.tmpl", "rules/*.yml"]

# aramid's own gate runs ruff with the bandit-derived S family armed
# (src/aramid/runners/ruff.py). The test suite legitimately trips four of
# those rules by design: pytest asserts (S101) and fake "secret" fixtures
# exercising the secret-handling paths (S105/S106/S107). Scoped to tests/
# only -- the S family stays fully armed for src/.
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S107"]
